integration_tests/tests/integration_tests/snapshots/integration_tests__regular_nft_tests__get_nft_editions.snap
---
source: integration_tests/tests/integration_tests/regular_nft_tests.rs
expression: response
---
{
  "total": 2,
  "limit": 10,
  "master_edition_address": "8SHfqzJYABeGfiG1apwiEYt6TvfGQiL1pdwEjvTKsyiZ",
  "supply": 60,
  "max_supply": 69,
  "editions": [
    {
      "mint_address": "9yQecKKYSHxez7fFjJkUvkz42TLmkoXzhyZxEf2pw8pz",
      "edition_address": "giWoA4jqHFkodPJgtbRYRcYtiXbsVytnxnEao3QT2gg",
      "edition_number": 2
    },
    {
      "mint_address": "GJvFDcBWf6aDncd1TBzx2ou1rgLFYaMBdbYLBa9oTAEw",
      "edition_address": "AoxgzXKEsJmUyF5pBb3djn9cJFA26zh2SQHvd9EYijZV",
      "edition_number": 1
    }
  ],
  "cursor": "AoxgzXKEsJmUyF5pBb3djn9cJFA26zh2SQHvd9EYijZV"
}
