integration_tests/tests/integration_tests/snapshots/integration_tests__regular_nft_tests__reg_get_owners_by_asset-base.snap
---
source: integration_tests/tests/integration_tests/regular_nft_tests.rs
expression: response
---
{
  "total": 1,
  "limit": 1000,
  "owners": [
    {
      "id": "3pZpPVKQHnWBJsnM8Q9omkCajJcTgaMp7gcwXh6x6dCV",
      "associated_token_address": "5Jg6Jearnb4Rc5tjztcBfWgox9dMy7gWxJ9rRrtBmW8V"
    }
  ]
}
